monitoring/configs/production/alloy/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy
  namespace: monitoring
spec:
  tls:
    - hosts:
        - &host alloy.fanen.dk
      secretName: alloy-fanen-dk-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy
                port:
                  name: http-metrics
