monitoring/configs/production/alloy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: alloy.fanen.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy
                port:
                  name: http-metrics
