monitoring/configs/production/alloy/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy-route
  namespace: monitoring
spec:
  hostnames:
    - alloy.fanen.dk
